[gd_scene load_steps=8 format=3 uid="uid://bg57lo6lpgnla"]

[ext_resource type="Script" uid="uid://bmxqvjgd2eopj" path="res://scripts/throwable_object.gd" id="1_xtfni"]
[ext_resource type="SpriteFrames" uid="uid://cbv1k6fh0hd4s" path="res://assets/styles/ThrowableObject.tres" id="2_wal74"]
[ext_resource type="AudioStream" uid="uid://beiw3sr052s87" path="res://music/sfx/GEN_throw.ogg" id="3_tjxxm"]
[ext_resource type="AudioStream" uid="uid://dqtqvmsisn42u" path="res://music/sfx/SYS_throw 2.ogg" id="4_8u0pa"]
[ext_resource type="AudioStream" uid="uid://bmiuh4ahbk1qx" path="res://music/sfx/SYS_throw.ogg" id="5_7kpem"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_tjxxm"]
friction = 0.8

[sub_resource type="CircleShape2D" id="CircleShape2D_throw"]
radius = 8.0

[node name="ThrowableObject" type="RigidBody2D"]
z_index = 1
collision_layer = 8
collision_mask = 7
mass = 0.006
physics_material_override = SubResource("PhysicsMaterial_tjxxm")
contact_monitor = true
max_contacts_reported = 5
script = ExtResource("1_xtfni")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = ExtResource("2_wal74")
animation = &"basketball"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_throw")

[node name="SFX" type="Node" parent="."]

[node name="Throw_strong" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("3_tjxxm")

[node name="Throw_light" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("4_8u0pa")

[node name="Throw_Alt" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("5_7kpem")
